[package]
name = "teleport"
version = "0.1.0"
edition = "2021"
description = "Stream iRacing telemetry to a remote machine over UDP"

[lib]
name = "teleport"
path = "src/lib.rs"

[[bin]]
name = "teleport"
path = "src/main.rs"

[[bin]]
name = "source"
path = "src/bin/source.rs"

[[bin]]
name = "target"
path = "src/bin/target.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
lz4_flex = "0.11"
ctrlc = "3"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
