[package]
name = "teleport"
version = "1.0.9"
edition = "2021"
description = "Stream iRacing telemetry to a remote machine over UDP"

[lib]
name = "teleport"
path = "src/lib.rs"

[[bin]]
name = "teleport"
path = "src/main.rs"

[[bin]]
name = "source"
path = "src/bin/source.rs"

[[bin]]
name = "target"
path = "src/bin/target.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# safe-encode disabled: encoder input is trusted local iRacing shared memory and the
# output buffer is pre-sized via get_maximum_output_size — bounds checks are redundant.
# checked-decode kept: validates compressed stream structure before decompressing
# network-sourced data, catching malformed packets before unsafe indexing could occur.
lz4_flex = { version = "0.11", default-features = false, features = ["std", "checked-decode"] }
ctrlc = "3"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"     # no unwind tables; faster panic, smaller binary
strip = "symbols"   # strip debug symbols from release binaries
